--- a/src/output.css
+++ b/src/output.css
@@ -578,6 +578,10 @@ video {
   }
 }
 
+.absolute {
+  position: absolute;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
@@ -641,6 +645,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .grid-cols-3 {
