--- a/src/output.css
+++ b/src/output.css
@@ -618,6 +618,22 @@ video {
   left: 35%;
 }
 
+.top-\[30px\] {
+  top: 30px;
+}
+
+.bottom-\[30px\] {
+  bottom: 30px;
+}
+
+.bottom-\[-30px\] {
+  bottom: -30px;
+}
+
+.bottom-\[-50px\] {
+  bottom: -50px;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
